--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hapi plugin that removes the toothache from creating CRUD endpoints for MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "make test-cov"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -26,13 +26,14 @@
   },
   "homepage": "https://github.com/smaxwellstewart/toothache",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.0.2",
+    "boom": "^2.5.1",
     "extend": "^1.3.0",
-    "hapi": "^6.7.1",
     "joi": "^4.6.2",
     "mongodb": "^1.4.9"
   },
   "devDependencies": {
+    "hapi": "^6.7.1",
     "lab": "^4.2.0"
   }
 }
