--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hapi plugin that removes the toothache from creating CRUD endpoints for MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test-cov"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "hapi": "^6.7.1",
+    "hapi-auth-hawk": "^1.1.1",
+    "hawk": "^2.2.3",
     "lab": "^4.2.0"
   }
 }
