--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "toothache",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "Hapi plugin that removes the toothache from creating CRUD endpoints for MongoDB.",
   "main": "index.js",
   "scripts": {
-    "test": "make test-cov-html"
+    "test": "make test-lcov"
   },
   "repository": {
     "type": "git",
